Added svg and update login style

--- a/src/components/App/app.scss
+++ b/src/components/App/app.scss
@@ -1,8 +1,4 @@
-@import "src/sass/variables";
+@import "src/sass/main-style";
 
-.container {
-    max-width: 1344px;
-    width: 1344px;
-    position: relative;
-    margin: 0 auto;
-}
+
+
