Added ValidSuccess component

--- a/src/sass/main-style.scss
+++ b/src/sass/main-style.scss
@@ -363,7 +363,7 @@ header {
 
 .container-login,
 .container-login-verification {
-  margin: $margin-8 auto 0 auto;
+  margin: 8rem auto 0 auto;
   display: block;
   max-width: 368px;
 }
