Added basic template for PokemonPage

--- a/src/sass/main-style.scss
+++ b/src/sass/main-style.scss
@@ -368,6 +368,10 @@ header {
   max-width: 368px;
 }
 
+.pokemons-page {
+  display: flex;
+}
+
 @media screen and (max-width: 1200px) {
   .container,
   .container-content,
