--- a/src/components/Pokemons/style.scss
+++ b/src/components/Pokemons/style.scss
@@ -1,6 +1,6 @@
 @import 'src/sass/variables.scss';
 
-.container-filter {
-  flex-basis: 30%;
+.container-pokemons {
+  flex-basis: 70%;
   flex-grow: 1;
 }
