Modified Filter style.cscc

--- a/src/components/Filter/style.scss
+++ b/src/components/Filter/style.scss
@@ -3,4 +3,52 @@
 .container-filter {
   flex-basis: 30%;
   flex-grow: 1;
+  margin: $margin-2;
+
+  h4 {
+    line-height: 48px;
+    text-align: center;
+  }
+
+  .filter-content {
+    margin: $margin-8 $margin-2 0 $margin-2;
+  }
+
+  .filter-row {
+    margin-right: $margin-3;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+
+    img {
+      position: absolute;
+      right: 10px;
+      cursor: pointer;
+    }
+
+    select {
+      display: block;
+      width: 100%;
+      padding: .75rem 0 0.75rem 1rem;
+      background: none;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      appearance: none;
+      font-family: inherit;
+      font-size: 1rem;
+      color: $gray-400;
+      border: 1px solid $gray-700;
+      cursor: pointer;
+    }
+
+  }
+  .filter-column:hover {
+    select {
+      color: $gray-700;
+    }
+  }
+  .filter-column:last-child {
+    margin-right: 0
+  }
 }
