--- a/src/components/Pokemon/style.scss
+++ b/src/components/Pokemon/style.scss
@@ -15,7 +15,27 @@
   .column-two {
     flex-basis: 60%;
     flex-grow: 1;
-    margin-left: $margin-4;
+    margin-left: $margin-8;
+
+    .pokemon-attribute {
+
+      line-height: 32px;
+      color: $gray-700;
+      font-size: $h4;
+      margin: $margin-3;
+
+      span {
+        margin-left: $margin-2;
+        color: $gray-400;
+      }
+    }
+
+    .line {
+      border: 1px solid $gray-100;
+      margin-top: $margin-4;
+      margin-bottom: $margin-4;
+      width: 90%;
+    }
   }
 
 }
