Added FullCardSkeleton, Modified Pokemon components

--- a/src/components/Pokemon/Attributes/Attack/style.scss
+++ b/src/components/Pokemon/Attributes/Attack/style.scss
@@ -3,7 +3,7 @@
 
 .attribute-item {
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
 
   .item {
     margin-left: $margin-5;
