--- a/src/components/Loader/Skeleton/style.scss
+++ b/src/components/Loader/Skeleton/style.scss
@@ -8,3 +8,21 @@
   background-color: $gray-100;
   border-radius: 10px;
 }
+
+.full-card-skeleton {
+
+  .card-image {
+    width: 441px;
+    height: 624px;
+    background-color: $gray-100;
+    display: inline-block;
+  }
+
+  .card-content {
+    width: 662px;
+    height: 624px;
+    margin-left: $margin-8;
+    background-color: $gray-100;
+    display: inline-block;
+  }
+}
