--- a/src/components/Pokemons/style.scss
+++ b/src/components/Pokemons/style.scss
@@ -20,17 +20,40 @@
     padding: .75rem;
   }
 
-  .card-gallery img {
-    background-size: 95%;
-    margin: 10px;
-    width: 240px;
-    cursor: pointer;
-    transform: perspective(1px) translateZ(0);
-    transition-duration: .3s;
-    transition-property: transform;
+  .card-gallery {
+    .card {
+      display: inline-block;
+      background-size: 95%;
+      margin: 10px;
+      width: 240px;
+      cursor: pointer;
+      transform: perspective(1px) translateZ(0);
+      transition-duration: .3s;
+      transition-property: transform;
+      position: relative;
 
-    &:hover {
-      transform: scale(1.1);
+      .large {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        background-color: $gray-100;
+        opacity: 0;
+        width: inherit;
+        height: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 10px;
+        transition: opacity;
+        transition-duration: .8s;
+      }
+
+      &:hover {
+        transform: scale(1.1);
+        .large {
+          opacity: 0.8;
+        }
+      }
     }
   }
 
