--- a/src/sass/main-style.scss
+++ b/src/sass/main-style.scss
@@ -575,3 +575,43 @@ button.look-pass.is-active {
     }
   }
 }
+
+// modal
+.fixed-overlay {
+  position: fixed;
+  overflow: auto;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.5);
+  animation-name: animateOpacity;
+  animation-duration: 1s;
+  z-index: 100;
+}
+
+.modal {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.modal_container {
+  position: relative;
+  padding: 20px;
+  color: #000;
+  width: 70%;
+  margin: auto;
+
+  img {
+    width: 100%;
+  }
+}
+
+
+@keyframes animateOpacity {
+  from {
+    opacity: 0
+  }
+}
