Modified Missing, Pokemons style

--- a/src/components/Missing/style.scss
+++ b/src/components/Missing/style.scss
@@ -1,7 +1,10 @@
 @import "src/sass/variables";
 
 .missing {
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
 
   h3 {
     text-align: center;
